// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header > should render an header 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="mb-1 flex items-center gap-3"
      >
        <div
          class="hidden sm:inline"
        />
        <h1
          class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header > should render an header with a subtitle 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="mb-1 flex items-center gap-3"
      >
        <div
          class="hidden sm:inline"
        />
        <h1
          class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
      <div
        class="mt-0.5 flex items-center text-xs font-semibold leading-5 text-theme-secondary-text sm:mt-1 sm:text-sm sm:font-normal sm:leading-[17px] md:text-base md:leading-5"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header > should render an header with extra 1`] = `
<DocumentFragment>
  <div
    class="flex items-end justify-between bg-theme-background"
  >
    <div
      class="space-y-2"
    >
      <div
        class="mb-1 flex items-center gap-3"
      >
        <div
          class="hidden sm:inline"
        />
        <h1
          class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
          data-testid="header__title"
        >
          Header test
        </h1>
      </div>
      <div
        class="mt-0.5 flex items-center text-xs font-semibold leading-5 text-theme-secondary-text sm:mt-1 sm:text-sm sm:font-normal sm:leading-[17px] md:text-base md:leading-5"
        data-testid="header__subtitle"
      >
        Subtitle test
      </div>
    </div>
    <div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 dim:bg-theme-navy-800"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex items-center gap-2"
          >
            Extra 1
          </div>
        </button>
        <button
          class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 dim:bg-theme-navy-800"
          data-testid="header__extra"
          type="button"
        >
          <div
            class="flex items-center gap-2"
          >
            Extra 2
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > should render responsive (md) 1`] = `
<DocumentFragment>
  <div
    class="w-full py-4 first:pt-8 last:pb-8"
  >
    <div
      class="mx-auto px-6 lg:container md:px-10"
    >
      <div
        class="flex items-end justify-between bg-theme-background"
      >
        <div
          class="space-y-2"
        >
          <div
            class="mb-1 flex items-center gap-3"
          >
            <div
              class="hidden sm:inline"
            />
            <div
              class="flex flex-col gap-2"
            >
              <h1
                class="mb-0 text-lg leading-[21px] md:text-2xl md:leading-[29px]"
                data-testid="header__title"
              >
                Header test
              </h1>
               
              <div
                class="mt-0.5 flex items-center text-xs font-semibold leading-5 text-theme-secondary-text sm:mt-1 sm:text-sm sm:font-normal sm:leading-[17px] md:text-base md:leading-5"
                data-testid="header__subtitle"
              >
                Subtitle test
              </div>
            </div>
          </div>
        </div>
        <div>
          extra
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > should render responsive (xs) 1`] = `
<DocumentFragment>
  <section
    class="md:h-13 flex w-full items-center justify-between bg-theme-secondary-100 px-6 py-3 dim:bg-theme-dim-950 dark:bg-black"
  >
    <div
      class="flex items-center gap-2"
    >
      <h1
        class="mb-0 text-lg font-semibold leading-[21px]"
      >
        Header test
      </h1>
    </div>
    extra
  </section>
</DocumentFragment>
`;
